; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_kern_credential.c_kauth_cred_proc_ref.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_kern_credential.c_kauth_cred_proc_ref.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @kauth_cred_proc_ref(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* %2, align 4
  %5 = call i32 @proc_ucred_lock(i32 %4)
  %6 = load i32, i32* %2, align 4
  %7 = call i32 @proc_ucred(i32 %6)
  store i32 %7, i32* %3, align 4
  %8 = load i32, i32* %3, align 4
  %9 = call i32 @kauth_cred_ref(i32 %8)
  %10 = load i32, i32* %2, align 4
  %11 = call i32 @proc_ucred_unlock(i32 %10)
  %12 = load i32, i32* %3, align 4
  ret i32 %12
}

declare dso_local i32 @proc_ucred_lock(i32) #1

declare dso_local i32 @proc_ucred(i32) #1

declare dso_local i32 @kauth_cred_ref(i32) #1

declare dso_local i32 @proc_ucred_unlock(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
